test/arrays/vass/const-checking.todo.good
const-checking.todo.good:20: In function 'main':
const-checking.todo.good:22: error: illegal lvalue in assignment
const-checking.todo.good:24: error: illegal lvalue in assignment
const-checking.todo.good:26: error: illegal lvalue in assignment
const-checking.todo.good:28: error: illegal lvalue in assignment
const-checking.todo.good:31: error: illegal lvalue in assignment
const-checking.todo.good:32: error: illegal lvalue in assignment
const-checking.todo.good:33: error: illegal lvalue in assignment
const-checking.todo.good:35: error: illegal lvalue in assignment
const-checking.todo.good:36: error: illegal lvalue in assignment
const-checking.todo.good:37: error: illegal lvalue in assignment
