test/arrays/vass/const-checking.todo.future
bug: array fields of records and classes are not checked for constness
